Fixing header spacing on screens larger than 1200px, resume updated text

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -652,6 +652,12 @@ pre tt:after {
   width: 100%;
   background: #f6f6f6;
   z-index: 100;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    margin: 0 auto;
+    left: calc(50% - 600px);
+  }
 }
 
 .header-github {
